# Dosidicus

./: Classes and Functions.md  README.md  brain.py  brain_debug_tool.py  config.ini  debug_window.py  decoration_stats.json  dosidicus_log.txt  error_logging.py  learning.py  main.py  mental_states.py  pyproject.toml  rps_game.py  save_manager.py  splash_screen.py  squid.py  squid_brain_window.py  statistics_window.py  tamagotchi_logic.py  ui.py  version
Docs/: Autonomous behaviour.md  Brain Tool.md  Brain Window.md  Creating Plugins.md  Curiosity, Anxiety, Satisfaction.md  Decision Engine.html  DecisionEngine.md  Goal Neurons.md  Hebbian Learning.md  Launch args.md  Memory System.md  Neural Learning System.html  Neurogenesis.html  Neurogenesis.md  Overview.md  Overview2.md  Personalities.md  Personality system.md  Personality.md  Scoring Points.md  Short-term & Long-term memory.md  Simulating Awareness.md  Squid Class.md  Tamagotchi Class.md  Technical Overview.md  Technical Overview: Squid Learning System.md  decision_engine.py.md  make_decision method.md  modding template.md  neurogenesis_config.json.md
Documentation/: Overview of Classes and Functions.md
neurons/: eat.json  food_angle.json  food_distance.json  h1.json  h2.json  h3.json  h4.json  happiness.json  hunger.json  neuron1.json  neuron2.json  neuron3.json  neuron4.json  play.json  sleep.json  tiredness.json
personalities/: __init__.py  adventurous_personality.py  energetic_personality.py  greedy_personality.py  introvert_personality.py  lazy_personality.py  stubborn_personality.py  timid_personality.py
(+64 files in other folders)
