[tool.poetry]
name = "dosidicus"
version = "2.4.2"
description = "Tamagotchi-style digital pet with a neural network"
authors = ["ViciousSquid"]
readme = "README.md"
packages = [{include = "src"}]
include = ["images/**/*", "main.py", "config.ini"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15"
numpy = "^1.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
